--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
@@ -86,7 +97,9 @@
     "    return\n",
     "    squared error between regression and true line (ss_tot)\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    \n",
+    "    SE_line = sum([y - np.mean(ys_a) for y in ys_a])\n",
+    "    return SE_line\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
@@ -168,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
